Fixed Firefox and Edge main content footer overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,9 @@ header{
 
 main    {
     position: relative;
-    top: 155px;
+
     width: 1000px;
-    margin: 0 auto 60px auto;
+    margin: 160px auto 50px auto;
     font-family: "Roboto";
 }
 
@@ -63,6 +63,7 @@ h4  {
     display: inline-block;
     width: 300px;
     margin-top: 10px;
+    font-size: 20px;
 }
 
 h3, h4  {
@@ -128,6 +129,7 @@ footer  {
     background-color: navy;
     padding: 10px;
     bottom: 0;
+    margin-top: auto;
 }
 
 .logo_pic img  {
@@ -146,7 +148,7 @@ footer  {
 }
 
 .color_name {
-    padding: 10px 0;
+    padding-bottom: 10px;
     display: inline-block;
 }
 
@@ -159,6 +161,10 @@ footer  {
     text-align: center;
     margin-bottom: 10px;
     font-weight: bold;
+}
+
+.color_description  {
+    margin-bottom: 10px;
 }
 
 .color_description, .font_description, .text_styles_description {
